grammar/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    coma
    comentario_multilinea
    comentario_simple
    igual
    pyc

Grammar

Rule 0     S' -> init
Rule 1     init -> expresion
Rule 2     init -> condicion
Rule 3     condicion -> condicion or condicion
Rule 4     condicion -> condicion xor condicion
Rule 5     condicion -> condicion and condicion
Rule 6     condicion -> not condicion
Rule 7     condicion -> pari condicion pard
Rule 8     condicion -> expresion mayque expresion
Rule 9     condicion -> expresion menque expresion
Rule 10    condicion -> expresion mayigual expresion
Rule 11    condicion -> expresion menigual expresion
Rule 12    condicion -> expresion igualque expresion
Rule 13    condicion -> expresion difque expresion
Rule 14    expresion -> expresion mas expresion
Rule 15    expresion -> expresion men expresion
Rule 16    expresion -> expresion por expresion
Rule 17    expresion -> expresion div expresion
Rule 18    expresion -> expresion mod expresion
Rule 19    expresion -> expresion pow expresion
Rule 20    expresion -> men expresion
Rule 21    expresion -> pari expresion pard
Rule 22    expresion -> entero
Rule 23    expresion -> decimal
Rule 24    expresion -> cadena
Rule 25    expresion -> caracter
Rule 26    expresion -> id

Terminals, with rules where they appear

and                  : 5
cadena               : 24
caracter             : 25
coma                 : 
comentario_multilinea : 
comentario_simple    : 
decimal              : 23
difque               : 13
div                  : 17
entero               : 22
error                : 
id                   : 26
igual                : 
igualque             : 12
mas                  : 14
mayigual             : 10
mayque               : 8
men                  : 15 20
menigual             : 11
menque               : 9
mod                  : 18
not                  : 6
or                   : 3
pard                 : 7 21
pari                 : 7 21
por                  : 16
pow                  : 19
pyc                  : 
xor                  : 4

Nonterminals, with rules where they appear

condicion            : 2 3 3 4 4 5 5 6 7
expresion            : 1 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 21
init                 : 0

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . expresion
    (2) init -> . condicion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id
    (3) condicion -> . condicion or condicion
    (4) condicion -> . condicion xor condicion
    (5) condicion -> . condicion and condicion
    (6) condicion -> . not condicion
    (7) condicion -> . pari condicion pard
    (8) condicion -> . expresion mayque expresion
    (9) condicion -> . expresion menque expresion
    (10) condicion -> . expresion mayigual expresion
    (11) condicion -> . expresion menigual expresion
    (12) condicion -> . expresion igualque expresion
    (13) condicion -> . expresion difque expresion

    men             shift and go to state 4
    pari            shift and go to state 5
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10
    not             shift and go to state 11

    init                           shift and go to state 1
    expresion                      shift and go to state 2
    condicion                      shift and go to state 3

state 1

    (0) S' -> init .



state 2

    (1) init -> expresion .
    (14) expresion -> expresion . mas expresion
    (15) expresion -> expresion . men expresion
    (16) expresion -> expresion . por expresion
    (17) expresion -> expresion . div expresion
    (18) expresion -> expresion . mod expresion
    (19) expresion -> expresion . pow expresion
    (8) condicion -> expresion . mayque expresion
    (9) condicion -> expresion . menque expresion
    (10) condicion -> expresion . mayigual expresion
    (11) condicion -> expresion . menigual expresion
    (12) condicion -> expresion . igualque expresion
    (13) condicion -> expresion . difque expresion

    $end            reduce using rule 1 (init -> expresion .)
    mas             shift and go to state 12
    men             shift and go to state 13
    por             shift and go to state 14
    div             shift and go to state 15
    mod             shift and go to state 16
    pow             shift and go to state 17
    mayque          shift and go to state 18
    menque          shift and go to state 19
    mayigual        shift and go to state 20
    menigual        shift and go to state 21
    igualque        shift and go to state 22
    difque          shift and go to state 23


state 3

    (2) init -> condicion .
    (3) condicion -> condicion . or condicion
    (4) condicion -> condicion . xor condicion
    (5) condicion -> condicion . and condicion

    $end            reduce using rule 2 (init -> condicion .)
    or              shift and go to state 24
    xor             shift and go to state 25
    and             shift and go to state 26


state 4

    (20) expresion -> men . expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    men             shift and go to state 4
    pari            shift and go to state 28
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    expresion                      shift and go to state 27

state 5

    (21) expresion -> pari . expresion pard
    (7) condicion -> pari . condicion pard
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id
    (3) condicion -> . condicion or condicion
    (4) condicion -> . condicion xor condicion
    (5) condicion -> . condicion and condicion
    (6) condicion -> . not condicion
    (7) condicion -> . pari condicion pard
    (8) condicion -> . expresion mayque expresion
    (9) condicion -> . expresion menque expresion
    (10) condicion -> . expresion mayigual expresion
    (11) condicion -> . expresion menigual expresion
    (12) condicion -> . expresion igualque expresion
    (13) condicion -> . expresion difque expresion

    men             shift and go to state 4
    pari            shift and go to state 5
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10
    not             shift and go to state 11

    expresion                      shift and go to state 29
    condicion                      shift and go to state 30

state 6

    (22) expresion -> entero .

    mas             reduce using rule 22 (expresion -> entero .)
    men             reduce using rule 22 (expresion -> entero .)
    por             reduce using rule 22 (expresion -> entero .)
    div             reduce using rule 22 (expresion -> entero .)
    mod             reduce using rule 22 (expresion -> entero .)
    pow             reduce using rule 22 (expresion -> entero .)
    mayque          reduce using rule 22 (expresion -> entero .)
    menque          reduce using rule 22 (expresion -> entero .)
    mayigual        reduce using rule 22 (expresion -> entero .)
    menigual        reduce using rule 22 (expresion -> entero .)
    igualque        reduce using rule 22 (expresion -> entero .)
    difque          reduce using rule 22 (expresion -> entero .)
    $end            reduce using rule 22 (expresion -> entero .)
    pard            reduce using rule 22 (expresion -> entero .)
    or              reduce using rule 22 (expresion -> entero .)
    xor             reduce using rule 22 (expresion -> entero .)
    and             reduce using rule 22 (expresion -> entero .)


state 7

    (23) expresion -> decimal .

    mas             reduce using rule 23 (expresion -> decimal .)
    men             reduce using rule 23 (expresion -> decimal .)
    por             reduce using rule 23 (expresion -> decimal .)
    div             reduce using rule 23 (expresion -> decimal .)
    mod             reduce using rule 23 (expresion -> decimal .)
    pow             reduce using rule 23 (expresion -> decimal .)
    mayque          reduce using rule 23 (expresion -> decimal .)
    menque          reduce using rule 23 (expresion -> decimal .)
    mayigual        reduce using rule 23 (expresion -> decimal .)
    menigual        reduce using rule 23 (expresion -> decimal .)
    igualque        reduce using rule 23 (expresion -> decimal .)
    difque          reduce using rule 23 (expresion -> decimal .)
    $end            reduce using rule 23 (expresion -> decimal .)
    pard            reduce using rule 23 (expresion -> decimal .)
    or              reduce using rule 23 (expresion -> decimal .)
    xor             reduce using rule 23 (expresion -> decimal .)
    and             reduce using rule 23 (expresion -> decimal .)


state 8

    (24) expresion -> cadena .

    mas             reduce using rule 24 (expresion -> cadena .)
    men             reduce using rule 24 (expresion -> cadena .)
    por             reduce using rule 24 (expresion -> cadena .)
    div             reduce using rule 24 (expresion -> cadena .)
    mod             reduce using rule 24 (expresion -> cadena .)
    pow             reduce using rule 24 (expresion -> cadena .)
    mayque          reduce using rule 24 (expresion -> cadena .)
    menque          reduce using rule 24 (expresion -> cadena .)
    mayigual        reduce using rule 24 (expresion -> cadena .)
    menigual        reduce using rule 24 (expresion -> cadena .)
    igualque        reduce using rule 24 (expresion -> cadena .)
    difque          reduce using rule 24 (expresion -> cadena .)
    $end            reduce using rule 24 (expresion -> cadena .)
    pard            reduce using rule 24 (expresion -> cadena .)
    or              reduce using rule 24 (expresion -> cadena .)
    xor             reduce using rule 24 (expresion -> cadena .)
    and             reduce using rule 24 (expresion -> cadena .)


state 9

    (25) expresion -> caracter .

    mas             reduce using rule 25 (expresion -> caracter .)
    men             reduce using rule 25 (expresion -> caracter .)
    por             reduce using rule 25 (expresion -> caracter .)
    div             reduce using rule 25 (expresion -> caracter .)
    mod             reduce using rule 25 (expresion -> caracter .)
    pow             reduce using rule 25 (expresion -> caracter .)
    mayque          reduce using rule 25 (expresion -> caracter .)
    menque          reduce using rule 25 (expresion -> caracter .)
    mayigual        reduce using rule 25 (expresion -> caracter .)
    menigual        reduce using rule 25 (expresion -> caracter .)
    igualque        reduce using rule 25 (expresion -> caracter .)
    difque          reduce using rule 25 (expresion -> caracter .)
    $end            reduce using rule 25 (expresion -> caracter .)
    pard            reduce using rule 25 (expresion -> caracter .)
    or              reduce using rule 25 (expresion -> caracter .)
    xor             reduce using rule 25 (expresion -> caracter .)
    and             reduce using rule 25 (expresion -> caracter .)


state 10

    (26) expresion -> id .

    mas             reduce using rule 26 (expresion -> id .)
    men             reduce using rule 26 (expresion -> id .)
    por             reduce using rule 26 (expresion -> id .)
    div             reduce using rule 26 (expresion -> id .)
    mod             reduce using rule 26 (expresion -> id .)
    pow             reduce using rule 26 (expresion -> id .)
    mayque          reduce using rule 26 (expresion -> id .)
    menque          reduce using rule 26 (expresion -> id .)
    mayigual        reduce using rule 26 (expresion -> id .)
    menigual        reduce using rule 26 (expresion -> id .)
    igualque        reduce using rule 26 (expresion -> id .)
    difque          reduce using rule 26 (expresion -> id .)
    $end            reduce using rule 26 (expresion -> id .)
    pard            reduce using rule 26 (expresion -> id .)
    or              reduce using rule 26 (expresion -> id .)
    xor             reduce using rule 26 (expresion -> id .)
    and             reduce using rule 26 (expresion -> id .)


state 11

    (6) condicion -> not . condicion
    (3) condicion -> . condicion or condicion
    (4) condicion -> . condicion xor condicion
    (5) condicion -> . condicion and condicion
    (6) condicion -> . not condicion
    (7) condicion -> . pari condicion pard
    (8) condicion -> . expresion mayque expresion
    (9) condicion -> . expresion menque expresion
    (10) condicion -> . expresion mayigual expresion
    (11) condicion -> . expresion menigual expresion
    (12) condicion -> . expresion igualque expresion
    (13) condicion -> . expresion difque expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    not             shift and go to state 11
    pari            shift and go to state 32
    men             shift and go to state 4
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    condicion                      shift and go to state 31
    expresion                      shift and go to state 33

state 12

    (14) expresion -> expresion mas . expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    men             shift and go to state 4
    pari            shift and go to state 28
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    expresion                      shift and go to state 34

state 13

    (15) expresion -> expresion men . expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    men             shift and go to state 4
    pari            shift and go to state 28
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    expresion                      shift and go to state 35

state 14

    (16) expresion -> expresion por . expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    men             shift and go to state 4
    pari            shift and go to state 28
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    expresion                      shift and go to state 36

state 15

    (17) expresion -> expresion div . expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    men             shift and go to state 4
    pari            shift and go to state 28
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    expresion                      shift and go to state 37

state 16

    (18) expresion -> expresion mod . expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    men             shift and go to state 4
    pari            shift and go to state 28
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    expresion                      shift and go to state 38

state 17

    (19) expresion -> expresion pow . expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    men             shift and go to state 4
    pari            shift and go to state 28
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    expresion                      shift and go to state 39

state 18

    (8) condicion -> expresion mayque . expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    men             shift and go to state 4
    pari            shift and go to state 28
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    expresion                      shift and go to state 40

state 19

    (9) condicion -> expresion menque . expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    men             shift and go to state 4
    pari            shift and go to state 28
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    expresion                      shift and go to state 41

state 20

    (10) condicion -> expresion mayigual . expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    men             shift and go to state 4
    pari            shift and go to state 28
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    expresion                      shift and go to state 42

state 21

    (11) condicion -> expresion menigual . expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    men             shift and go to state 4
    pari            shift and go to state 28
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    expresion                      shift and go to state 43

state 22

    (12) condicion -> expresion igualque . expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    men             shift and go to state 4
    pari            shift and go to state 28
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    expresion                      shift and go to state 44

state 23

    (13) condicion -> expresion difque . expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    men             shift and go to state 4
    pari            shift and go to state 28
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    expresion                      shift and go to state 45

state 24

    (3) condicion -> condicion or . condicion
    (3) condicion -> . condicion or condicion
    (4) condicion -> . condicion xor condicion
    (5) condicion -> . condicion and condicion
    (6) condicion -> . not condicion
    (7) condicion -> . pari condicion pard
    (8) condicion -> . expresion mayque expresion
    (9) condicion -> . expresion menque expresion
    (10) condicion -> . expresion mayigual expresion
    (11) condicion -> . expresion menigual expresion
    (12) condicion -> . expresion igualque expresion
    (13) condicion -> . expresion difque expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    not             shift and go to state 11
    pari            shift and go to state 32
    men             shift and go to state 4
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    condicion                      shift and go to state 46
    expresion                      shift and go to state 33

state 25

    (4) condicion -> condicion xor . condicion
    (3) condicion -> . condicion or condicion
    (4) condicion -> . condicion xor condicion
    (5) condicion -> . condicion and condicion
    (6) condicion -> . not condicion
    (7) condicion -> . pari condicion pard
    (8) condicion -> . expresion mayque expresion
    (9) condicion -> . expresion menque expresion
    (10) condicion -> . expresion mayigual expresion
    (11) condicion -> . expresion menigual expresion
    (12) condicion -> . expresion igualque expresion
    (13) condicion -> . expresion difque expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    not             shift and go to state 11
    pari            shift and go to state 32
    men             shift and go to state 4
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    condicion                      shift and go to state 47
    expresion                      shift and go to state 33

state 26

    (5) condicion -> condicion and . condicion
    (3) condicion -> . condicion or condicion
    (4) condicion -> . condicion xor condicion
    (5) condicion -> . condicion and condicion
    (6) condicion -> . not condicion
    (7) condicion -> . pari condicion pard
    (8) condicion -> . expresion mayque expresion
    (9) condicion -> . expresion menque expresion
    (10) condicion -> . expresion mayigual expresion
    (11) condicion -> . expresion menigual expresion
    (12) condicion -> . expresion igualque expresion
    (13) condicion -> . expresion difque expresion
    (14) expresion -> . expresion mas expresion
    (15) expresion -> . expresion men expresion
    (16) expresion -> . expresion por expresion
    (17) expresion -> . expresion div expresion
    (18) expresion -> . expresion mod expresion
    (19) expresion -> . expresion pow expresion
    (20) expresion -> . men expresion
    (21) expresion -> . pari expresion pard
    (22) expresion -> . entero
    (23) expresion -> . decimal
    (24) expresion -> . cadena
    (25) expresion -> . caracter
    (26) expresion -> . id

    not             shift and go to state 11
    pari            shift and go to state 32
    men             shift and go to state 4
    entero          shift and go to state 6
    decimal         shift and go to state 7
    cadena          shift and go to state 8
    caracter        shift and go to state 9
    id              shift and go to state 10

    condicion                      shift and go to state 48
    expresion                      shift and go to state 33

state 27

    (20) expresion -> men expresion .
    (14) expresion -> expresion . mas expresion
    (15) expresion -> expresion . men expresion
    (16) expresion -> expresion . por expresion
    (17) expresion -> expresion . div expresion
    (18) expresion -> expresion . mod expresion
    (19) expresion -> expresion . pow expresion
